# schoolconnect

./: .cursorignore  .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.json  AGENTS.md  CLAUDE.md  COMPREHENSIVE_DATA_REPORT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: ci-status.md  validate-full.md  validate.md
.claude/issues/: code-review-issues.md  parallel-fix-plan.yaml
.claude/skills/: action-items.md  analyze-attendance.md  check-attendance.md  check-grades.md  communication-suggestions.md  draft-teacher-email.md  grade-trends.md  missing-work.md  student-summary.md  teacher-meeting-prep.md  weekly-report.md
.github/workflows/: agent-trigger.yml  ci.yml
.kiro/settings/: lsp.json
docs/: REMOTE_AGENT_CONTROL.md
scripts/: generate_agent_report.py  generate_test_summary.py  load_data.py  recon.py  recon_enhanced.py  scrape_full.py  seed_test_data.py  trigger_workflow.sh  validate_ground_truth.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/database/: __init__.py  connection.py  models.py  repository.py  schema.sql  views.sql
src/logutils/: __init__.py  config.py  context.py  formatters.py  handlers.py  logger.py  masking.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: __init__.py  assignments.py  attendance.py  grades.py  insights.py  students.py
src/scraper/: __init__.py  auth.py  config.py  core.py
src/scraper/parsers/: __init__.py  assignments.py  attendance.py  course_scores.py  grades.py  teacher_comments.py
streamlit-chat/: ai_assistant.py  app.py  auth.py  conftest.py  data_queries.py  repository_adapter.py  requirements.txt  seed_data.py  session_manager.py  test_ai_assistant.py  test_app.py  test_auth.py  test_data_queries.py
streamlit-chat/.streamlit/: config.toml  custom.css
tests/: __init__.py  conftest.py  test_database.py  test_mcp_tools.py  test_parsers.py
tests/e2e/: __init__.py  test_alerts.py  test_mcp_tools.py  test_multi_student_scraper.py  test_scraper.py  test_streamlit_ui.py
tests/fixtures/: test_student_data.json
tests/integration/: __init__.py  test_course_scores_db.py  test_daily_attendance_db.py  test_database_operations.py  test_parser_fixtures.py  test_teacher_comments_db.py
tests/unit/: __init__.py  test_ai_assistant.py  test_attendance_parser.py  test_course_scores_parser.py  test_database.py  test_logging_config.py  test_logging_context.py  test_logging_formatters.py  test_logging_logger.py  test_logging_masking.py  test_parsers.py  test_skills_analysis.py  test_skills_communication.py  test_skills_student_data.py  test_teacher_comments_parser.py
