[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerschool-portal"
version = "0.1.0"
description = "PowerSchool Parent Portal Enhancement - Scrape, store, and analyze student data with MCP server for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "PowerSchool Portal Team" }
]
keywords = ["powerschool", "education", "mcp", "ai", "parent-portal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
powerschool = "src.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
