[project]
name = "powerschool-portal"
version = "0.1.0"
description = "PowerSchool Parent Portal Enhancement - Scrape, store, and analyze student data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SchoolConnect Team"}
]
keywords = ["powerschool", "education", "scraper", "mcp", "parent-portal", "grades"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Private :: Do Not Upload",
]
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-html>=4.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "anthropic>=0.20.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0,<9.0.0",
]

[project.scripts]
powerschool = "src.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (database, parsers)",
    "e2e: End-to-end tests (requires PowerSchool access)",
    "ui: UI tests (requires browser)",
    "streamlit: Streamlit-specific UI tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # Allow imports after sys.path modification

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
